[gd_scene load_steps=9 format=3 uid="uid://cnrduy54kvvf8"]

[ext_resource type="Script" path="res://src/components/projects/project_item/project_item.gd" id="1_aivn8"]
[ext_resource type="Script" path="res://src/components/misc/favorite_button.gd" id="2_4lhxn"]
[ext_resource type="PackedScene" uid="uid://b2tm4lxm80sj0" path="res://src/components/editors/local/editor_item/rename_editor_dialog.tscn" id="2_ybiwe"]
[ext_resource type="Script" path="res://src/components/misc/list_item_icon.gd" id="3_tvtl4"]
[ext_resource type="Script" path="res://src/components/misc/list_item_title_label.gd" id="4_m00kj"]
[ext_resource type="Script" path="res://src/components/misc/list_item_path_label.gd" id="5_bf7vh"]
[ext_resource type="Script" path="res://src/components/misc/themed_button.gd" id="6_8vyss"]
[ext_resource type="Script" path="res://src/components/misc/item_tag_container.gd" id="6_k6uq1"]

[node name="ProjectItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aivn8")
_rename_dialog_scene = ExtResource("2_ybiwe")

[node name="Favorite" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="FavoriteButton" type="TextureButton" parent="Favorite"]
layout_mode = 2
script = ExtResource("2_4lhxn")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
script = ExtResource("3_tvtl4")

[node name="InfoVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="InfoVBox"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="InfoVBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "test"
script = ExtResource("4_m00kj")

[node name="Control" type="Control" parent="InfoVBox/Title"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="ProjectFeatures" type="Label" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
clip_text = true
text_overrun_behavior = 3

[node name="TagContainer" type="HBoxContainer" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_k6uq1")

[node name="InfoBody" type="VBoxContainer" parent="InfoVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Editor" type="HBoxContainer" parent="InfoVBox/InfoBody"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2

[node name="EditorButton" type="Button" parent="InfoVBox/InfoBody/Editor"]
unique_name_in_owner = true
layout_mode = 2
flat = true

[node name="EditorPathLabel" type="Label" parent="InfoVBox/InfoBody/Editor"]
unique_name_in_owner = true
layout_mode = 2
text = "/home/kovkel/editor/path"
script = ExtResource("5_bf7vh")

[node name="Path" type="HBoxContainer" parent="InfoVBox/InfoBody"]
layout_mode = 2

[node name="ExploreButton" type="Button" parent="InfoVBox/InfoBody/Path"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
flat = true
script = ExtResource("6_8vyss")

[node name="PathLabel" type="Label" parent="InfoVBox/InfoBody/Path"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
text = "/home/kovkel/editor/path"
script = ExtResource("5_bf7vh")

[node name="ProjectWarning" type="TextureRect" parent="InfoVBox/InfoBody/Path"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 3
